--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -2,5 +2,11 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
-    gap: 30px;
+    gap: 20px;
+    width: 80%;
+}
+.container-main {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
 }
