--- a/client/src/styles/DetailProduct.css
+++ b/client/src/styles/DetailProduct.css
@@ -1,79 +1,36 @@
 @import url(https://fonts.google.com/specimen/Kumbh+Sans);
-.contenedor{
-    width: 400px;
 
-    text-align: left;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    margin: auto;
-    padding: 30px;
+.container-detail {
+    width: 100vw;
     display: flex;
+    gap: 10px;
     flex-direction: column;
+}
 
-}
-.empresa{
-    font-family: "Kumbh Sans", serif;
-    padding: 20px;
-    color: hsl(26, 100%, 55%);
-    align-self: flex-start;
-}
-.modelo{
-    padding: 10px;
-
-}
-.descripcion{
-    width: 90%;
-    position: relative;
-    left: 18px;
-    align-self: flex-start;
-    text-align: left;
-}
-.descu{
-    background-color: hsl(25, 100%, 94%);
-    color: hsl(26, 100%, 55%);
-    width: 70px;
-
-}
-.restar{
-    width: 30px;
-
-}
-.sumar{
-    width: 30px;
-}
-.agregar{
-    padding: 5px;
-    background-color: hsl(26, 100%, 55%);
-    color: hsl(25, 100%, 94%);
-    border: none;
-    border-radius: 10%;
-    width: 90px;
-}
-/*******************************************************************************************/
-.imgContainer{
+.imgContainer {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 400px;
-    height: 500px;
+    width: 90%;
+    height: 80%;
     padding: 10px;
 }
-.imgPrincipal{
+
+.imgPrincipal {
     width: 100%;
-    height: 420px;
+    height: 428px;
     border-radius: 25px;
     cursor: pointer;
 }
-.imgMosaico{
+
+.imgMosaico {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 100%;
     height: 100px;
 }
-.img_mini{
+
+.img_mini {
     width: 80px;
     height: 80px;
     border-radius: 10px;
@@ -81,14 +38,139 @@
     transition: 0.2s;
 }
 
-.img_mini:hover{
+.img_mini:hover {
     padding: 1px;
     border: solid;
     border-width: 4px;
-    border-color:orange;
+    border-color: orange;
 }
-.container-detail {
+
+.contenedor {
+    width: 90%;
+    padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+}
+
+.empresa {
+    font-family: "Kumbh Sans", serif;
+    color: hsl(26, 100%, 55%);
+}
+
+.modelo {
+    width: 100%;
+    font-size: 2rem;
+    margin-top: 10px;
+}
+
+.descripcion {
+    width: 90%;
+    color: hsla(0, 0%, 0%, 50%);
+    margin-top: 10px;
+}
+
+.div-moneda {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+    margin-top: 10px;
+}
+
+.descu {
+    background-color: hsl(25, 100%, 94%);
+    color: hsl(26, 100%, 55%);
+    padding: 0 5px;
+}
+
+.precioante {
+    text-decoration: line-through;
+}
+
+.cantidad {
+    height: 50px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    background-color: hsla(0, 0%, 0%, 10%);
+    margin-top: 10px;
+}
+
+.restar {
+    background-color: transparent;
+    width: 30px;
+    height: 30px;
+    border: none;
+    font-size: 1.7rem;
+    font-weight: bold;
+    color: hsl(26, 100%, 55%);
+}
+
+.restar:hover {
+    cursor: pointer;
+}
+
+.sumar:hover {
+    cursor: pointer;
+}
+
+.sumar {
+    background-color: transparent;
+    width: 30px;
+    height: 30px;
+    border: none;
+    font-size: 1.7rem;
+    font-weight: bold;
+    color: hsl(26, 100%, 55%);
+}
+
+.agregar {
+    padding: 5px;
+    background-color: hsl(26, 100%, 55%);
+    color: hsl(25, 100%, 94%);
+    font-weight: bold;
+    border: none;
+    border-radius: 10px;
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+}
+
+.agregar:hover {
+    cursor: pointer;
+}
+
+@media (min-width: 668px) {
+    .contenedor {
+        justify-content: center;
+    }
+
+    .container-detail {
+        flex-direction: row;
+        justify-content: center;
+        gap: 10px;
+        padding: 10px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .imgContainer {
+        max-width: 428px;
+        gap: 20px;
+        padding: 30px;
+    }
+
+    .contenedor {
+        max-width: 600px;
+    }
+
+    .container-detail {
+        flex-direction: row;
+        gap: 10px;
+    }
 }
