--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,12 +1,35 @@
-.container-cards {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    justify-items: center;
-    gap: 20px;
-    width: 80%;
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
+body {
+    font-family: 'Kumbh Sans', sans-serif;
 }
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.container-cards {
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 25px;
+}
+
+.h1-colletion {
+    border-bottom: 3px solid hsl(26, 100%, 55%);
+    width: 180px;
+    margin: 0 auto;
+    font-size: 2.5rem;
+    letter-spacing: -1.5px;
+}
+
+hr {
+    margin: 20px auto 20px auto;
+    width: 95%;
+}
+
 .container-main {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
+    text-align: center;
 }
